<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="tts_no_config">Text-To-Speech is not configured. Tap to open it</string>
	<string name="unknown_number">Unknown Number</string>
    <string name="app_name">Speaker</string>
    <string name="will_speak_sms">Speaker will read-out new text messages</string>
    <string name="speak_sms">Speak new SMS messages</string>
    <string name="sms_readout">You have a new message from {from} saying, {message}</string>
    <string name="wont_speak_sms">Speaker will not read-out new SMS messages</string>
    <string name="will_speak_desktop">Desktop notifications will also be spoken</string>
    <string name="wont_speak_desktop">Desktop notifications will not be spoken</string>
    <string name="speak_desktop_notifications">Speak notifications sent to Android Desktop Notifier</string>
    <string name="test_desktop_notifer">Test Desktop Notifier</string>
    <string name="unknown">Unknown</string>
    <string name="test_desktop_notifier_hint">Sends a test notification via Desktop Notifier</string>
    <string name="telephone_options">Phone related settings</string>
    <string name="notify_calls">Announce incoming calls</string>
    <string name="will_speak_calls">Speaker will tell you about incoming calls</string>
    <string name="call_readout">{from} is calling you</string>
    <string name="sms_readout_priv">{from} sent you a text</string>
    <string name="with_privacy"> (with privacy)</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sms_privacy">Keep content of SMS readouts private</string>
    <string name="settings_for_contact">Settings for {name}\'s {line} line</string>
    <string name="talking">Speaker is announcing</string>
    <string name="wont_speak_calls">Speaker will not tell you about incoming calls</string>
    <string name="headphones_only">Headphones only</string>
    <string name="headphones_only_on">Speaker will only announce when you have headphones plugged in</string>
    <string name="headphones_only_off">Speaker will announce even if headphones are not plugged in</string>
    <string name="audio_options">Audio Options</string>
    <string name="audio_ducking">Audio Ducking</string>
    <string name="link">Web Address</string>
    <string name="happy_face">Happy Face</string>
    <string name="sad_face">Sad Face</string>
    <string name="audio_ducking_on">Speaker will lower media volume to announce things</string>
    <string name="audio_ducking_off">Speaker will not lower the volume at all</string>
    <string name="enable_speaker">Enable Speaker</string>
    <string name="global_on">Speaker is enabled</string>
    <string name="global_off">Speaker is disabled and will not speak anything</string>
    <string name="third_party">Third Party Options</string>
    <string name="external_apps">Enable Speaker API</string>
    <string name="api_on">Speaker will announce things by other apps</string>
    <string name="api_off">Speaker will not announce things by other apps</string>
    <string name="custom_sms_readout">SMS Announcement Script</string>
    <string name="custom_sms_readout_hint">Create a custom script to be read when you are texted</string>
    <string name="custom_call_readout">Call Announcement Script</string>
    <string name="custom_call_readout_hint">Create a custom script to be read when you are called</string>
    <string name="renotify_calls">Re-announce incoming calls</string>
    <string name="renotify_on">Speaker will announce incoming calls until they are picked up</string>
    <string name="renotify_off">Speaker will only speak incoming call alerts once (if enabled)</string>
    <string name="skip_silent">Speak during Silent</string>
    <string name="skip_silent_on">Speaker will still speak while your phone is in Silent</string>
    <string name="skip_silent_off">Speaker will not speak while your phone is in silent</string>
    <string name="utils">Utilities</string>
    <string name="speak_clipboard">Speak Clipboard</string>
    <string name="canceled">Speaker can\'t speak because of one of your settings</string>
    <string name="no_clipboard">Nothing in the clipboard sir!</string>
    <string name="speak_clipbaord_description">Speak the contents of your clipboard</string>
    <string name="please_wait">Please wait...</string>
    <string name="tts_setup">Speaker Setup</string>
    <string name="tts_ok">Speaker should work!</string>
    <string name="tts_no_tts">You haven\'t set up TTS on your device. Tap here to do that now</string>
    <string name="sush_calls">Shush during calls</string>
    <string name="sush_calls_on">Speaker will not speak during calls</string>
    <string name="shush_calls_off">Speaker will still speak during calls</string>
    <string name="reset">Reset</string>
    <string name="reset_description">Clears all notifications and stops any current speaking</string>
    <string name="pro">Speaker Pro</string>
    <string name="pro_purchased">Pro is purchased</string>
    <string name="pro_not_purchased">Pro is not purchased</string>
    <string name="pro_processing">Purchase of Pro is processing...</string>
    <string name="pro_thanks">Thank you for purchasing Pro!</string>
    <string name="pro_error">Error. Tap to retry</string>
    <string name="per_contact">Per Contact</string>
    <string name="per_contact_summary">Manage settings on a per-contact basis</string>
    <string name="add_contact">Add Contact</string>
    <string name="select_number">Select phone number</string>
    <string name="default_opt">Default</string>
    <string name="speak">Speak</string>
    <string name="dont_speak">Don\'t Speak</string>
</resources>
